<resources>
    <string name="app_name">Enlightened</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_tab">Insert Tab</string>
    <string name="open_file">Open File</string>
    <string name="settings">Settings</string>
    <string name="save_file">Save File</string>
    <string name="save_file_as">Save As</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="no_recent_files">No Recent Files</string>

    <string name="pref_show_tab_tool_summary">Whether to show an Insert Tab button in the toolbar.</string>
    <string name="pref_show_tab_tool">Show Tab Tool</string>
    <string name="pref_autosave">Auto-save files</string>
    <string name="pref_autosave_summary">If enabled, Enlightened will automatically save your changes.</string>
    <string name="pref_font_size_summary">The font size for the code editor</string>
    <string name="pref_font_size">Font Size</string>
    <string name="prefs_header_editor">Editor Preferences</string>
    <string name="pref_about">About Enlightened</string>
    <string name="pref_about_summary">Information about Enlightened Editor</string>
    <string name="prefs_header_about">About</string>
    <string name="prefs_header_codehighlighting">Code Highlighting</string>
    <string name="pref_codehighlighting_import_summary">Import custom language support syntax and color highlighting schemes.</string>
    <string name="pref_codehighlighting_import">Import Highlighting Definitions</string>
    <string name="pref_tab_size_summary">The tab size for the editor</string>
    <string name="pref_tab_size">Tab Size</string>


</resources>
